--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,62 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button_show_interstital_ad"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_banner_ad"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Interstital Ad"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/banner_ad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:adSize="BANNER"
-        app:adUnitId="@string/banner_adUnit_id"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.33" />
+
+    <Button
+        android:id="@+id/btn_interstital_ad"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/interstitial_ad"
+        app:layout_constraintEnd_toEndOf="@+id/btn_banner_ad"
+        app:layout_constraintStart_toStartOf="@+id/btn_banner_ad"
+        app:layout_constraintTop_toBottomOf="@+id/btn_banner_ad" />
+
+    <Button
+        android:id="@+id/btn_native_advanced_ad"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/native_advanced_ad"
+        app:layout_constraintEnd_toEndOf="@+id/btn_interstital_ad"
+        app:layout_constraintStart_toStartOf="@+id/btn_interstital_ad"
+        app:layout_constraintTop_toBottomOf="@+id/btn_interstital_ad" />
+
+    <Button
+        android:id="@+id/btn_adaptive_banner_ad"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Adaptive BannerAd"
+        app:layout_constraintEnd_toEndOf="@+id/btn_native_advanced_ad"
+        app:layout_constraintStart_toStartOf="@+id/btn_native_advanced_ad"
+        app:layout_constraintTop_toBottomOf="@+id/btn_native_advanced_ad" />
+
+    <Button
+        android:id="@+id/btn_reward_ad"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/reward_ad"
+        app:layout_constraintEnd_toEndOf="@+id/btn_adaptive_banner_ad"
+        app:layout_constraintStart_toStartOf="@+id/btn_adaptive_banner_ad"
+        app:layout_constraintTop_toBottomOf="@+id/btn_adaptive_banner_ad" />
 </androidx.constraintlayout.widget.ConstraintLayout>
