--- a/app/src/main/res/layout/activity_native_advanced_ad.xml
+++ b/app/src/main/res/layout/activity_native_advanced_ad.xml
@@ -3,7 +3,7 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.android.gms.example.nativeadvancedexample.MainActivity">
+    tools:context="com.example.advertisement.NativeAdvancedAdActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
